updated modules and link styles

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,5 @@
-<div class="container">
+<!-- Page Footer -->
+<footer id="fh5co-footer" role="contentinfo">
     <!-- <div class="container">
                     <div class="row row-pb-md">
                         <div class="col-md-4 fh5co-widget">
@@ -39,38 +40,44 @@
                             </ul>
                         </div>
                     </div> -->
-
-    <div class="row copyright">
-        <div class="col-md-12 text-center">
-            <p>
-                Copyright &copy;
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>
-                Forrest Herman
-                <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
-                <br />
-                <a
-                    href="mailto:forrestherman.photography@gmail.com?subject='Forrest Herman — Wedding Photographer + Filmmaker Inquiry'"
-                >
-                    forrestherman.photography@gmail.com
-                </a>
-                <br />
-                (705) 203-2534
-            </p>
-            <div>
-                <ul class="fh5co-social-icons">
-                    <li>
-                        <a href="https://www.instagram.com/forrestherman/"><i class="icon-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/forrestherman.photography"><i class="icon-facebook"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.pinterest.ca/forresthermanphotography/"><i class="icon-pinterest"></i></a>
-                    </li>
-                </ul>
+    <div class="container">
+        <div class="footer-logo img-container display-flex-row justify-center">
+            <a href="index.html">
+                <img id="footer-logo" src="img/forrest-herman-black.png" alt="logo" />
+            </a>
+        </div>
+        <div class="row copyright">
+            <div class="col-md-12 text-center">
+                <p>
+                    Copyright &copy;
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>
+                    Forrest Herman
+                    <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
+                    <br />
+                    <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
+                    <br />
+                    <a href="tel:7052032534"> (705) 203-2534</a>
+                </p>
+                <div>
+                    <ul class="fh5co-social-icons">
+                        <li>
+                            <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/forrestherman.ca" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="fab fa-youtube"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</footer>
+<!--end of Page Footer -->
