--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
         <!--[if lt IE 9]>
             <script src="js/respond.min.js"></script>
         <![endif]-->
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M423Z0G5J7"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag("js", new Date())
+
+            gtag("config", "G-M423Z0G5J7")
+        </script>
     </head>
     <body>
         <div class="fh5co-loader"></div>
@@ -96,12 +108,6 @@
                                 <li><a href="about.html">Hello</a></li>
                                 <li>
                                     <a href="photos.html">Photos</a>
-                                    <!-- <ul class="dropdown">
-										<li><a href="#">Web Design</a></li>
-										<li><a href="#">eCommerce</a></li>
-										<li><a href="#">Branding</a></li>
-										<li><a href="#">API</a></li>
-									</ul> -->
                                 </li>
                                 <li>
                                     <a href="films.html">Films</a>
@@ -550,18 +556,11 @@
                 </div>
             </div> -->
 
-            <!-- ****************************************** Insta callout ****************************************** -->
-
+            <!-- Insta Callout -->
             <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
                 <div class="overlay"></div>
-                <div class="container">
-                    <div class="row animate-box">
-                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading insta-callout">
-                            <h2>Check Out My Instagram</h2>
-                            <hr class="mdash-hr" />
-                            <h4><a href="https://www.instagram.com/forrestherman/" target="_blank">@forrestherman</a></h4>
-                        </div>
-                    </div>
+                <div class="animate-box">
+                    <div include-html="callout_insta.html"></div>
                 </div>
             </div>
 
@@ -598,150 +597,20 @@
                 </div>
             </div> -->
 
-            <!-- ****************************************** Footer ****************************************** -->
-
-            <!-- Page Footer -->
-            <footer id="fh5co-footer" role="contentinfo">
-                <div class="container">
-                    <div class="footer-logo img-container display-flex-row justify-center">
-                        <a href="index.html">
-                            <img id="footer-logo" src="img/forrest-herman-black.png" alt="logo" />
-                        </a>
-                    </div>
-                    <div class="row copyright">
-                        <div class="col-md-12 text-center">
-                            <p>
-                                Copyright &copy;
-                                <script>
-                                    document.write(new Date().getFullYear())
-                                </script>
-                                Forrest Herman
-                                <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
-                                <br />
-                                <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
-                                <br />
-                                <a href="tel:7052032534"> (705) 203-2534</a>
-                            </p>
-                            <div>
-                                <ul class="fh5co-social-icons">
-                                    <li>
-                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="fab fa-instagram"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.facebook.com/forrestherman.ca" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="fab fa-youtube"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            <!--end of Page Footer -->
+            <!-- Footer -->
+            <div include-html="footer.html"></div>
         </div>
+
+        <div include-html="alertBar.html"></div>
+
+        <div include-html="typeformSidebar.html"></div>
 
         <div class="gototop js-top">
             <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
         </div>
 
-        <!-- ****************************************** Footer Alert Bar ****************************************** -->
-
-        <div id="footer-notif-placeholder"></div>
-
-        <script>
-            $(function () {
-                $("#footer-notif-placeholder").load("footerStickyNotif.html")
-            })
-        </script>
-        <!--end of Footer notif bar-->
-
-        <!-- ****************************************** Typeform Chat ****************************************** -->
         <!-- <div data-tf-chat data-tf-tooltip="Hey 👋&nbsp;&nbsp;How can I help you? " data-tf-popover="AoN00cGe" data-tf-button-color="#AD977B"></div>
         <script src="//embed.typeform.com/next/embed.js"></script> -->
-
-        <!-- Typeform Sidebar -->
-        <div class="hidden-on-hero hidden hidden-on-mobile" style="position: fixed; top: calc(50% - 250px); right: 0; transition: width 300ms ease-out; width: 0" data-qa="side_panel">
-            <a
-                class="typeform-share button"
-                href="https://form.typeform.com/to/AoN00cGe?typeform-medium=embed-snippet"
-                data-mode="side_panel"
-                style="
-                    box-sizing: border-box;
-                    position: absolute;
-                    top: 300px;
-                    width: 200px;
-                    height: 48px;
-                    padding: 0 20px;
-                    margin: 0;
-                    cursor: pointer;
-                    background: #ad977b;
-                    border-radius: 4px 4px 0px 0px;
-                    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.06), 0px 2px 4px rgba(0, 0, 0, 0.08);
-                    display: flex;
-                    align-items: center;
-                    justify-content: flex-start;
-                    transform: rotate(-90deg);
-                    transform-origin: bottom left;
-                    color: white;
-                    text-decoration: none;
-                    z-index: 9999;
-                "
-                data-width="320"
-                data-height="500"
-                target="_blank"
-            >
-                <span class="icon" style="width: 32px; position: relative; text-align: center; transform: rotate(90deg) scale(0.85); left: -8px">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-top: 10px">
-                        <path
-                            d="M21 0H0V9L10.5743 24V16.5H21C22.6567 16.5 24 15.1567 24 13.5V3C24 1.34325 22.6567 0 21 0ZM7.5 9.75C6.672 9.75 6 9.07875 6 8.25C6 7.42125 6.672 6.75 7.5 6.75C8.328 6.75 9 7.42125 9 8.25C9 9.07875 8.328 9.75 7.5 9.75ZM12.75 9.75C11.922 9.75 11.25 9.07875 11.25 8.25C11.25 7.42125 11.922 6.75 12.75 6.75C13.578 6.75 14.25 7.42125 14.25 8.25C14.25 9.07875 13.578 9.75 12.75 9.75ZM18 9.75C17.172 9.75 16.5 9.07875 16.5 8.25C16.5 7.42125 17.172 6.75 18 6.75C18.828 6.75 19.5 7.42125 19.5 8.25C19.5 9.07875 18.828 9.75 18 9.75Z"
-                            fill="white"
-                        />
-                    </svg>
-                </span>
-                <span
-                    style="
-                        text-decoration: none;
-                        font-size: 18px;
-                        font-family: Helvetica, Arial, sans-serif;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                        width: 100%;
-                        text-align: center;
-                        -webkit-font-smoothing: antialiased;
-                        -moz-osx-font-smoothing: grayscale;
-                    "
-                >
-                    Get in touch!
-                </span>
-            </a>
-        </div>
-        <script>
-            ;(function () {
-                var qs,
-                    js,
-                    q,
-                    s,
-                    d = document,
-                    gi = d.getElementById,
-                    ce = d.createElement,
-                    gt = d.getElementsByTagName,
-                    id = "typef_orm_share",
-                    b = "https://embed.typeform.com/"
-                if (!gi.call(d, id)) {
-                    js = ce.call(d, "script")
-                    js.id = id
-                    js.src = b + "embed.js"
-                    q = gt.call(d, "script")[0]
-                    q.parentNode.insertBefore(js, q)
-                }
-            })()
-        </script>
 
         <!-- Font Awesome -->
         <script src="https://use.fontawesome.com/bfdc9bea0d.js"></script>
@@ -765,28 +634,11 @@
         <script src="js/jquery.magnific-popup.min.js"></script>
         <script src="js/magnific-popup-options.js"></script>
 
-        <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script> -->
-        <script src="js/simplyCountdown.js"></script>
         <!-- Main -->
         <script src="js/main.js"></script>
-
+        <!-- Bring in Html elements -->
         <script>
-            var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000)
-
-            // default example
-            simplyCountdown(".simply-countdown-one", {
-                year: d.getFullYear(),
-                month: d.getMonth() + 1,
-                day: d.getDate(),
-            })
-
-            //jQuery example
-            $("#simply-countdown-losange").simplyCountdown({
-                year: d.getFullYear(),
-                month: d.getMonth() + 1,
-                day: d.getDate(),
-                enableUtc: false,
-            })
+            includeHTML()
         </script>
     </body>
 </html>
