fixed typeform, updated offerings page

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                             <div class="feature-left animate-box order-1" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
                                     <span class="icon">
-                                        <i class="icon-image"></i>
+                                        <i class="fas fa-images"></i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
@@ -414,7 +414,7 @@
                             <div class="feature-left animate-box order-2" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
                                     <span class="icon">
-                                        <i class="icon-image"></i>
+                                        <i class="fas fa-user-friends"></i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
@@ -426,7 +426,7 @@
                             <div class="feature-left animate-box order-3" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
                                     <span class="icon">
-                                        <i class="icon-image"></i>
+                                        <i class="fas fa-video"></i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
@@ -441,7 +441,7 @@
                             <div class="feature-left animate-box order-4" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
                                     <span class="icon">
-                                        <i class="icon-image"></i>
+                                        <i class="fas fa-user-tie"></i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
@@ -469,7 +469,7 @@
                             <div class="feature-left animate-box order-5" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
                                     <span class="icon">
-                                        <i class="icon-image"></i>
+                                        <i class="fas fa-users"></i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
@@ -484,7 +484,7 @@
                             <div class="feature-left animate-box order-6" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
                                     <span class="icon">
-                                        <i class="icon-image"></i>
+                                        <i class="fas fa-briefcase"></i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
@@ -603,11 +603,82 @@
 
         <div include-html="alertBar.html"></div>
 
-        <div include-html="typeformSidebar.html"></div>
-
         <div class="gototop js-top">
             <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
         </div>
+
+        <!-- Typeform Sidebar -->
+        <div class="hidden-on-hero hidden hidden-on-mobile" style="position: fixed; top: calc(50% - 250px); right: 0; transition: width 300ms ease-out; width: 0" data-qa="side_panel">
+            <a
+                class="typeform-share button"
+                href="https://form.typeform.com/to/AoN00cGe?typeform-medium=embed-snippet"
+                data-mode="side_panel"
+                style="
+                    box-sizing: border-box;
+                    position: absolute;
+                    top: 300px;
+                    width: 200px;
+                    height: 48px;
+                    padding: 0 20px;
+                    margin: 0;
+                    cursor: pointer;
+                    background: #ad977b;
+                    border-radius: 4px 4px 0px 0px;
+                    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.06), 0px 2px 4px rgba(0, 0, 0, 0.08);
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
+                    transform: rotate(-90deg);
+                    transform-origin: bottom left;
+                    color: white;
+                    text-decoration: none;
+                    z-index: 9999;
+                "
+                data-width="320"
+                data-height="500"
+                target="_blank"
+            >
+                <span class="icon" style="width: 32px; position: relative; text-align: center; transform: rotate(90deg) scale(0.85); left: -8px; font-size: 25px">
+                    <i class="far fa-comment-dots"></i>
+                </span>
+                <span
+                    style="
+                        text-decoration: none;
+                        font-size: 20px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        width: 100%;
+                        text-align: center;
+                        -webkit-font-smoothing: antialiased;
+                        -moz-osx-font-smoothing: grayscale;
+                    "
+                >
+                    Get in touch!
+                </span>
+            </a>
+        </div>
+        <script>
+            ;(function () {
+                var qs,
+                    js,
+                    q,
+                    s,
+                    d = document,
+                    gi = d.getElementById,
+                    ce = d.createElement,
+                    gt = d.getElementsByTagName,
+                    id = "typef_orm_share",
+                    b = "https://embed.typeform.com/"
+                if (!gi.call(d, id)) {
+                    js = ce.call(d, "script")
+                    js.id = id
+                    js.src = b + "embed.js"
+                    q = gt.call(d, "script")[0]
+                    q.parentNode.insertBefore(js, q)
+                }
+            })()
+        </script>
 
         <!-- <div data-tf-chat data-tf-tooltip="Hey 👋&nbsp;&nbsp;How can I help you? " data-tf-popover="AoN00cGe" data-tf-button-color="#AD977B"></div>
         <script src="//embed.typeform.com/next/embed.js"></script> -->
