fixed menu and removed gototop on mobile

--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,6 @@
                                             <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
                                         </p>
                                     </li>
-                                    <!-- <li class="url"><a href="http://gettemplates.co">gettemplates.co</a></li> -->
                                 </ul>
                             </div>
                         </div>
@@ -187,7 +186,7 @@
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="subject">Let's follow each other!</label>
+                                        <label for="subject">Instagram — Let's follow each other!</label>
                                         <input type="text" id="subject" class="form-control" placeholder="@your-instagram-handle" />
                                     </div>
                                 </div>
@@ -200,11 +199,12 @@
                                             <option value="Wedding or Elopement Photography">Wedding / Elopement - Photography</option>
                                             <option value="Wedding or Elopement Film">Wedding / Elopement - Film</option>
                                             <option value="Engagement / Proposal">Engagement / Proposal</option>
+                                            <option value="Family Session">Couple Session</option>
                                             <option value="Family Session">Family Session</option>
                                             <option value="Event or Celebration">Event</option>
                                             <option value="other">Other</option>
                                         </select>
-                                        <p style="margin-bottom: 0px"><a href="offerings.html">Explore packages</a></p>
+                                        <p style="margin-bottom: 0px"><a href="offerings.html" target="_blank">Explore packages</a></p>
                                     </div>
                                 </div>
 
@@ -229,20 +229,26 @@
                                     </div>
                                 </div>
 
+                                <!-- <div class="row form-group">
+                                    <div class="col-md-12">
+                                        <label for="message">Let me in on a favourite memory of you both! (Optional)</label>
+                                        <textarea type="message" id="message" cols="30" rows="10" class="form-control" placeholder=""></textarea>
+                                    </div>
+                                </div> -->
+
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="message">Tell me more *</label>
-                                        <textarea
-                                            type="message"
-                                            id="message"
-                                            cols="30"
-                                            rows="10"
-                                            class="form-control"
-                                            placeholder="The more details the better. How can I serve you?"
-                                            required=""
-                                        ></textarea>
+                                        <label for="message">Add any extra details here — How can I help you?</label>
+                                        <textarea type="message" id="message" cols="30" rows="4" class="form-control" placeholder="The more details the better. How can I serve you?"></textarea>
                                     </div>
                                 </div>
+
+                                <!-- <div class="row form-group">
+                                    <div class="col-md-12">
+                                        <label for="message">Any question for me?</label>
+                                        <textarea type="message" id="questions" cols="30" rows="10" class="form-control" placeholder="Questions here, don't be shy!"></textarea>
+                                    </div>
+                                </div> -->
 
                                 <div class="form-group">
                                     <input type="submit" value="Send Message" class="btn btn-form" />
@@ -296,9 +302,9 @@
             <div include-html="footer.html"></div>
         </div>
 
-        <div include-html="alertBar.html"></div>
+        <!-- <div include-html="alertBar.html"></div> -->
 
-        <div class="gototop js-top">
+        <div class="gototop js-top hidden-on-mobile">
             <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
         </div>
 
