--- a/films.html
+++ b/films.html
@@ -255,7 +255,7 @@
 
         <div include-html="alertBar.html"></div>
 
-        <div class="gototop js-top">
+        <div class="gototop js-top hidden-on-mobile">
             <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
         </div>
 
