--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                     <div id="nav" class="row nav nav-white">
                         <div class="col-xs-2 col-nav">
                             <div id="fh5co-logo">
-                                <a href="index.html">
+                                <a href="index">
                                     <img id="logo" src="img/forrest-herman-white.png" alt="logo" />
                                 </a>
                             </div>
                         </div>
                         <div class="col-xs-10 text-right menu-1">
                             <ul id="nav-menu" class="nav-menu">
-                                <li class="hidden-on-mobile"><a href="index.html">Home</a></li>
+                                <li class="hidden-on-mobile"><a href="home">Home</a></li>
                                 <li><a href="about">Hello</a></li>
                                 <li>
                                     <a href="photos.html">Photos</a>
@@ -115,7 +115,7 @@
                                 <li class="has-dropdown">
                                     <a href="offerings.html">Offerings</a>
                                     <ul class="dropdown">
-                                        <li><a href="offerings.html">Photos</a></li>
+                                        <li><a href="offerings">Photos</a></li>
                                         <li><a href="#">Films</a></li>
                                     </ul>
                                 </li>
