--- a/contact.html
+++ b/contact.html
@@ -78,29 +78,29 @@
                     <div id="nav" class="row nav nav-white">
                         <div class="col-xs-2 col-nav">
                             <div id="fh5co-logo">
-                                <a href="index.html">
+                                <a href="index">
                                     <img id="logo" src="img/forrest-herman-white.png" alt="logo" />
                                 </a>
                             </div>
                         </div>
                         <div class="col-xs-10 text-right menu-1">
                             <ul id="nav-menu" class="nav-menu">
-                                <li class="hidden-on-mobile"><a href="index.html">Home</a></li>
-                                <li><a href="about.html">Hello</a></li>
+                                <li class="hidden-on-mobile"><a href="index">Home</a></li>
+                                <li><a href="about">Hello</a></li>
                                 <li>
-                                    <a href="photos.html">Photos</a>
+                                    <a href="photos">Photos</a>
                                 </li>
                                 <li>
-                                    <a href="films.html">Films</a>
+                                    <a href="films">Films</a>
                                 </li>
                                 <li class="has-dropdown">
-                                    <a href="offerings.html">Offerings</a>
+                                    <a href="offerings">Offerings</a>
                                     <ul class="dropdown">
-                                        <li><a href="offerings.html">Photos</a></li>
+                                        <li><a href="offerings">Photos</a></li>
                                         <li><a href="#">Films</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                                             <option value="Event or Celebration">Event</option>
                                             <option value="other">Other</option>
                                         </select>
-                                        <p style="margin-bottom: 0px"><a href="offerings.html" target="_blank">Explore packages</a></p>
+                                        <p style="margin-bottom: 0px"><a href="offerings" target="_blank">Explore packages</a></p>
                                     </div>
                                 </div>
 
