--- a/offerings.html
+++ b/offerings.html
@@ -86,29 +86,29 @@
                     <div id="nav" class="row nav nav-black">
                         <div class="col-xs-2 col-nav">
                             <div id="fh5co-logo">
-                                <a href="index.html">
+                                <a href="index">
                                     <img id="logo" src="img/forrest-herman-black.png" alt="logo" />
                                 </a>
                             </div>
                         </div>
                         <div class="col-xs-10 text-right menu-1">
                             <ul id="nav-menu" class="nav-menu">
-                                <li class="hidden-on-mobile"><a href="index.html">Home</a></li>
-                                <li><a href="about.html">Hello</a></li>
+                                <li class="hidden-on-mobile"><a href="index">Home</a></li>
+                                <li><a href="about">Hello</a></li>
                                 <li>
-                                    <a href="photos.html">Photos</a>
+                                    <a href="photos">Photos</a>
                                 </li>
                                 <li>
-                                    <a href="films.html">Films</a>
+                                    <a href="films">Films</a>
                                 </li>
                                 <li class="has-dropdown">
-                                    <a href="offerings.html">Offerings</a>
+                                    <a href="offerings">Offerings</a>
                                     <ul class="dropdown">
-                                        <li><a href="offerings.html">Photos</a></li>
+                                        <li><a href="offerings">Photos</a></li>
                                         <li><a href="#">Films</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                                 the town, I have great options for you. For a full breakdown of my packages, or to chat more about a custom quote, please inquire below.
                             </p>
                             <div class="btn-container btn-border-black display-flex-row justify-center">
-                                <a class="btn" href="/contact.html">Inquire Here</a>
+                                <a class="btn" href="/contact">Inquire Here</a>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                                 Whether you're planning a love story for today or the future, this session is for you. Capture stunning visuals you and your partner will cherish forever.
                             </p>
                             <div class="btn-container btn-border-black display-flex-row justify-center">
-                                <a class="btn" href="/contact.html">Inquire Here</a>
+                                <a class="btn" href="/contact">Inquire Here</a>
                             </div>
                         </div>
                         <div class="img-container animate-box">
@@ -190,7 +190,7 @@
                             <p>Receptions, birthdays, and other celebrations begin at $150, and are quoted on a case by case basis</p>
                             <p style="color: black; font-style: normal">Throwing a party? I'm in!</p>
                             <div class="btn-container btn-border-black display-flex-row justify-center">
-                                <a class="btn" href="/contact.html">Inquire Here</a>
+                                <a class="btn" href="/contact">Inquire Here</a>
                             </div>
                         </div>
                         <div class="img-container animate-box">
@@ -212,7 +212,7 @@
                                 <i>yourselves</i>.
                             </p>
                             <div class="btn-container btn-border-black display-flex-row justify-center">
-                                <a class="btn" href="/contact.html">Inquire Here</a>
+                                <a class="btn" href="/contact">Inquire Here</a>
                             </div>
                         </div>
                         <!-- <div class="img-container animate-box">
