--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="col-xs-10 text-right menu-1">
                             <ul id="nav-menu" class="nav-menu">
-                                <li class="hidden-on-mobile"><a href="home">Home</a></li>
+                                <li class="hidden-on-mobile"><a href="index.html">Home</a></li>
                                 <li><a href="about">Hello</a></li>
                                 <li>
                                     <a href="photos.html">Photos</a>
